# ppcm-firmware

./: .gitignore  CMakeLists.txt  CMakePresets.json  arm-toolchain.cmake
cmake/: arm-none-eabi-gcc.cmake  arm-toolchain.cmake
core/common/: math.hpp  register.hpp  run_once.hpp  static_lambda.hpp
core/general/: interrupt.hpp  meta_tools.hpp  register.hpp  static_lambda.hpp
core/include/: macros.h  main.h  mcu.h  peripherals.h
core/peripherals/: bus.hpp  dma.hpp  dma_registers.hpp  gpio.hpp  gpio_registers.hpp  interrupt.hpp  rcc.hpp  rcc_register.hpp  sys_tick.hpp  usart.hpp  usart_registers.hpp
core/src/: interrupts.cpp  main.cpp  mcu.cpp  peripherals.cpp
core/system/: constants.hpp  interrupt.hpp  literals.hpp  mcu_config.hpp  pin_defs.hpp  serial.hpp  system.hpp  types.hpp
drivers/: CMakeLists.txt  testCMakeLists.txt
libs/common/: math.hpp  register.hpp  run_once.hpp  static_lambda.hpp  tools.hpp
libs/common/containers/: fifo.hpp  ring_buffer.hpp  span.hpp
libs/mcu/: bus.hpp  dma.hpp  dma_registers.hpp  gpio.hpp  gpio_registers.hpp  interrupt.hpp  rcc.hpp  rcc_register.hpp  spi.hpp  spi_registers.hpp  sys_tick.hpp  systick_registers.hpp  usart.hpp  usart_registers.hpp
